main.log
  File "/home/charlie/task-printer/main.py", line 21
    Print the rendered list
          ^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/charlie/task-printer/main.py", line 10, in <module>
    active_bundles = scheduler.find_active_bundles()
  File "/home/charlie/task-printer/scheduler.py", line 58, in find_active_bundles
    with open('todo.txt') as todo:
FileNotFoundError: [Errno 2] No such file or directory: 'todo.txt'
Traceback (most recent call last):
  File "/home/charlie/task-printer/main.py", line 10, in <module>
    active_bundles = scheduler.find_active_bundles()
  File "/home/charlie/task-printer/scheduler.py", line 50, in find_active_bundles
    with open('todo.txt') as todo:
FileNotFoundError: [Errno 2] No such file or directory: 'todo.txt'
Traceback (most recent call last):
  File "/home/charlie/task-printer/main.py", line 10, in <module>
    active_bundles = scheduler.find_active_bundles()
  File "/home/charlie/task-printer/scheduler.py", line 50, in find_active_bundles
    with open('todo.txt') as todo:
FileNotFoundError: [Errno 2] No such file or directory: 'todo.txt'
Traceback (most recent call last):
  File "/home/charlie/task-printer/main.py", line 10, in <module>
    active_bundles = scheduler.find_active_bundles()
  File "/home/charlie/task-printer/scheduler.py", line 50, in find_active_bundles
    with open('todo.txt') as todo:
FileNotFoundError: [Errno 2] No such file or directory: 'todo.txt'
